--- a/app/src/main/res/layout/fragment_diary.xml
+++ b/app/src/main/res/layout/fragment_diary.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cl_diary"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/cl_diary"
     android:background="@color/colorPrimary"
     tools:context=".ui.fragments.diary.DiaryFragment">
 
@@ -13,20 +13,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="4dp"
-        android:layout_marginEnd="16dp"
         android:alpha="0"
         android:translationY="100dp"
+        android:visibility="gone"
         app:backgroundTint="@color/colorPrimaryDark"
         app:fabSize="mini"
         app:layout_constraintBottom_toTopOf="@+id/fab_supper"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/fab_supper"
+        app:layout_constraintStart_toStartOf="@id/fab_supper"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1"
         app:layout_constraintVertical_chainStyle="packed"
         app:srcCompat="@drawable/ic_avatar_placeholder"
         app:tint="@android:color/white"
         tools:alpha="1"
-        tools:translationY="0dp" />
+        tools:translationY="0dp"
+        tools:visibility="visible" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_supper"
@@ -35,16 +37,18 @@
         android:layout_marginVertical="4dp"
         android:alpha="0"
         android:translationY="100dp"
+        android:visibility="gone"
         app:backgroundTint="@color/colorPrimaryDark"
         app:fabSize="mini"
         app:layout_constraintBottom_toTopOf="@+id/fab_dinner"
-        app:layout_constraintEnd_toEndOf="@+id/fab_snacks"
-        app:layout_constraintStart_toStartOf="@+id/fab_snacks"
+        app:layout_constraintEnd_toEndOf="@+id/fab_dinner"
+        app:layout_constraintStart_toStartOf="@+id/fab_dinner"
         app:layout_constraintTop_toBottomOf="@+id/fab_snacks"
         app:srcCompat="@drawable/ic_avatar_placeholder"
         app:tint="@android:color/white"
         tools:alpha="1"
-        tools:translationY="0dp" />
+        tools:translationY="0dp"
+        tools:visibility="visible" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_dinner"
@@ -53,16 +57,19 @@
         android:layout_marginVertical="4dp"
         android:alpha="0"
         android:translationY="100dp"
+        android:visibility="gone"
         app:backgroundTint="@color/colorPrimaryDark"
         app:fabSize="mini"
         app:layout_constraintBottom_toTopOf="@+id/fab_breakfast"
-        app:layout_constraintEnd_toEndOf="@+id/fab_supper"
-        app:layout_constraintStart_toStartOf="@+id/fab_supper"
+        app:layout_constraintEnd_toEndOf="@id/fab_breakfast"
+        app:layout_constraintStart_toStartOf="@id/fab_breakfast"
         app:layout_constraintTop_toBottomOf="@+id/fab_supper"
         app:srcCompat="@drawable/ic_avatar_placeholder"
         app:tint="@android:color/white"
         tools:alpha="1"
-        tools:translationY="0dp" />
+        tools:layout_editor_absoluteX="348dp"
+        tools:translationY="0dp"
+        tools:visibility="visible" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_breakfast"
@@ -72,42 +79,47 @@
         android:layout_marginBottom="12dp"
         android:alpha="0"
         android:translationY="100dp"
+        android:visibility="gone"
         app:backgroundTint="@color/colorPrimaryDark"
         app:fabSize="mini"
         app:layout_constraintBottom_toTopOf="@+id/fab_main"
-        app:layout_constraintEnd_toEndOf="@+id/fab_dinner"
-        app:layout_constraintStart_toStartOf="@+id/fab_dinner"
+        app:layout_constraintEnd_toEndOf="@+id/fab_main"
+        app:layout_constraintStart_toStartOf="@+id/fab_main"
         app:layout_constraintTop_toBottomOf="@+id/fab_dinner"
         app:srcCompat="@drawable/ic_avatar_placeholder"
         app:tint="@android:color/white"
         tools:alpha="1"
-        tools:translationY="0dp" />
+        tools:translationY="0dp"
+        tools:visibility="visible" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         app:backgroundTint="@color/colorAccentSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/fab_breakfast"
-        app:layout_constraintStart_toStartOf="@+id/fab_breakfast"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fab_breakfast"
         app:srcCompat="@drawable/ic_add"
         app:tint="@color/colorPrimaryDark" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_diary_breakfast"
-        app:layout_constraintBottom_toBottomOf="@id/fab_breakfast"
-        app:layout_constraintTop_toTopOf="@id/fab_breakfast"
-        android:alpha="0"
-        tools:alpha="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:alpha="0"
+        android:visibility="gone"
         app:cardBackgroundColor="@color/colorPrimaryDark"
         app:cardCornerRadius="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/fab_breakfast">
+        app:layout_constraintBottom_toBottomOf="@id/fab_breakfast"
+        app:layout_constraintEnd_toStartOf="@+id/fab_breakfast"
+        app:layout_constraintTop_toTopOf="@id/fab_breakfast"
+        tools:alpha="1"
+        tools:visibility="visible">
 
         <TextView
             android:layout_width="wrap_content"
@@ -123,14 +135,16 @@
         android:id="@+id/cv_diary_dinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:alpha="0"
+        android:visibility="gone"
         app:cardBackgroundColor="@color/colorPrimaryDark"
         app:cardCornerRadius="8dp"
-        app:layout_constraintTop_toTopOf="@id/fab_dinner"
-        app:layout_constraintEnd_toStartOf="@+id/fab_dinner"
         app:layout_constraintBottom_toBottomOf="@id/fab_dinner"
-        android:alpha="0"
-        android:layout_marginEnd="8dp"
-        tools:alpha="1">
+        app:layout_constraintEnd_toStartOf="@+id/fab_dinner"
+        app:layout_constraintTop_toTopOf="@id/fab_dinner"
+        tools:alpha="1"
+        tools:visibility="visible">
 
         <TextView
             android:layout_width="wrap_content"
@@ -147,14 +161,16 @@
         android:id="@+id/cv_diary_supper"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:alpha="0"
+        android:visibility="gone"
         app:cardBackgroundColor="@color/colorPrimaryDark"
         app:cardCornerRadius="8dp"
-        android:alpha="0"
-        tools:alpha="1"
-        app:layout_constraintTop_toTopOf="@id/fab_supper"
         app:layout_constraintBottom_toBottomOf="@id/fab_supper"
         app:layout_constraintEnd_toStartOf="@+id/fab_supper"
-        android:layout_marginEnd="8dp">
+        app:layout_constraintTop_toTopOf="@id/fab_supper"
+        tools:alpha="1"
+        tools:visibility="visible">
 
         <TextView
             android:layout_width="wrap_content"
@@ -171,14 +187,16 @@
         android:id="@+id/cv_diary_snacks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/colorPrimaryDark"
-        app:cardCornerRadius="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/fab_snacks"
-        app:layout_constraintBottom_toBottomOf="@id/fab_snacks"
-        app:layout_constraintTop_toTopOf="@id/fab_snacks"
         android:layout_marginEnd="8dp"
         android:alpha="0"
-        tools:alpha="1">
+        android:visibility="gone"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardCornerRadius="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/fab_snacks"
+        app:layout_constraintEnd_toStartOf="@+id/fab_snacks"
+        app:layout_constraintTop_toTopOf="@id/fab_snacks"
+        tools:alpha="1"
+        tools:visibility="visible">
 
         <TextView
             android:layout_width="wrap_content"
