--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="18dp"
+    android:height="18dp"
+    android:viewportWidth="18"
     android:tint="@color/colorAccent"
-    android:viewportWidth="30.239"
-    android:viewportHeight="30.239">
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M20.194,3.46c-4.613,-4.613 -12.121,-4.613 -16.734,0c-4.612,4.614 -4.612,12.121 0,16.735c4.108,4.107 10.506,4.547 15.116,1.34c0.097,0.459 0.319,0.897 0.676,1.254l6.718,6.718c0.979,0.977 2.561,0.977 3.535,0c0.978,-0.978 0.978,-2.56 0,-3.535l-6.718,-6.72c-0.355,-0.354 -0.794,-0.577 -1.253,-0.674C24.743,13.967 24.303,7.57 20.194,3.46zM18.073,18.074c-3.444,3.444 -9.049,3.444 -12.492,0c-3.442,-3.444 -3.442,-9.048 0,-12.492c3.443,-3.443 9.048,-3.443 12.492,0C21.517,9.026 21.517,14.63 18.073,18.074z" />
+    android:viewportHeight="18">
+  <path
+      android:pathData="M12.8645,11.3208H12.0515L11.7633,11.0429C12.7719,9.8696 13.3791,8.3465 13.3791,6.6895C13.3791,2.9948 10.3842,0 6.6895,0C2.9948,0 0,2.9948 0,6.6895C0,10.3842 2.9948,13.3791 6.6895,13.3791C8.3465,13.3791 9.8696,12.7719 11.0429,11.7633L11.3208,12.0515V12.8645L16.4666,18L18,16.4666L12.8645,11.3208ZM6.6895,11.3208C4.1269,11.3208 2.0583,9.2521 2.0583,6.6895C2.0583,4.1269 4.1269,2.0583 6.6895,2.0583C9.2521,2.0583 11.3208,4.1269 11.3208,6.6895C11.3208,9.2521 9.2521,11.3208 6.6895,11.3208Z"
+      android:fillColor="@android:color/white"/>
 </vector>
