--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.diary.add_food.SearchActivity">
+    tools:context=".ui.fragments.search.SearchActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/apb_search"
