--- a/app/src/main/res/layout/fragment_add_food.xml
+++ b/app/src/main/res/layout/fragment_add_food.xml
@@ -5,18 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".ui.fragments.diary.add_food.AddFoodActivity">
+    tools:context=".ui.fragments.add_food.AddFoodFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_add_food"
         android:layout_width="0dp"
         android:elevation="8dp"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_arrow"
         app:titleTextColor="@android:color/white" />
 
     <androidx.cardview.widget.CardView
@@ -47,7 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_marginStart="24dp"
                 android:textSize="18sp"
-                android:text="Search for food"
+                android:text="@string/search_hint"
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
