--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,85 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".ui.fragments.diary.DiaryFragment">
+    tools:context=".ui.fragments.home.HomeFragment">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_home"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_collapseMode="pin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+        app:titleTextColor="@color/colorWhite" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardCornerRadius="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_home"
+        app:layout_constraintWidth_percent=".95">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp">
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/btn_home_stats"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:scaleType="centerCrop"
+                android:background="@android:color/transparent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_stats" />
+
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/pie_home_dashboard_calories"
+                android:layout_width="@dimen/home_dashboard_calorie_pie"
+                android:layout_height="@dimen/home_dashboard_calorie_pie"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="32dp"
+                app:layout_constraintTop_toBottomOf="@id/btn_home_stats" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_home_dashboard_current_calories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/LargeText"
+                app:layout_constraintBottom_toTopOf="@id/tv_home_dashboard_goal_calories"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/pie_home_dashboard_calories"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:text="1750" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="@string/kcal"
+                android:textAppearance="@style/SmallText"
+                app:layout_constraintBaseline_toBaselineOf="@id/tv_home_dashboard_current_calories"
+                app:layout_constraintStart_toEndOf="@id/tv_home_dashboard_current_calories" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_home_dashboard_goal_calories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/SmallText"
+                app:layout_constraintBottom_toBottomOf="@id/pie_home_dashboard_calories"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_home_dashboard_current_calories"
+                tools:text="Goal 3500" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_snacks"
@@ -16,7 +94,7 @@
         android:alpha="0"
         android:translationY="100dp"
         android:visibility="gone"
-        app:backgroundTint="@color/colorPrimaryDark"
+        app:backgroundTint="@color/colorAccentSecondary"
         app:fabSize="mini"
         app:layout_constraintBottom_toTopOf="@+id/fab_supper"
         app:layout_constraintEnd_toEndOf="@id/fab_supper"
@@ -24,9 +102,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1"
         app:layout_constraintVertical_chainStyle="packed"
-        app:srcCompat="@drawable/ic_avatar_placeholder"
+        app:srcCompat="@drawable/ic_snacks"
         app:tint="@android:color/white"
-        tools:alpha="1"
+        tools:alpha=".6"
         tools:translationY="0dp"
         tools:visibility="visible" />
 
@@ -38,15 +116,15 @@
         android:alpha="0"
         android:translationY="100dp"
         android:visibility="gone"
-        app:backgroundTint="@color/colorPrimaryDark"
+        app:backgroundTint="@color/colorAccentSecondary"
         app:fabSize="mini"
         app:layout_constraintBottom_toTopOf="@+id/fab_dinner"
         app:layout_constraintEnd_toEndOf="@+id/fab_dinner"
         app:layout_constraintStart_toStartOf="@+id/fab_dinner"
         app:layout_constraintTop_toBottomOf="@+id/fab_snacks"
-        app:srcCompat="@drawable/ic_avatar_placeholder"
+        app:srcCompat="@drawable/ic_supper"
         app:tint="@android:color/white"
-        tools:alpha="1"
+        tools:alpha=".6"
         tools:translationY="0dp"
         tools:visibility="visible" />
 
@@ -58,16 +136,15 @@
         android:alpha="0"
         android:translationY="100dp"
         android:visibility="gone"
-        app:backgroundTint="@color/colorPrimaryDark"
+        app:backgroundTint="@color/colorAccentSecondary"
         app:fabSize="mini"
         app:layout_constraintBottom_toTopOf="@+id/fab_breakfast"
         app:layout_constraintEnd_toEndOf="@id/fab_breakfast"
         app:layout_constraintStart_toStartOf="@id/fab_breakfast"
         app:layout_constraintTop_toBottomOf="@+id/fab_supper"
-        app:srcCompat="@drawable/ic_avatar_placeholder"
-        app:tint="@android:color/white"
-        tools:alpha="1"
-        tools:layout_editor_absoluteX="348dp"
+        app:srcCompat="@drawable/ic_dinner"
+        app:tint="@color/colorWhite"
+        tools:alpha=".6"
         tools:translationY="0dp"
         tools:visibility="visible" />
 
@@ -80,15 +157,15 @@
         android:alpha="0"
         android:translationY="100dp"
         android:visibility="gone"
-        app:backgroundTint="@color/colorPrimaryDark"
+        app:backgroundTint="@color/colorAccentSecondary"
         app:fabSize="mini"
         app:layout_constraintBottom_toTopOf="@+id/fab_main"
         app:layout_constraintEnd_toEndOf="@+id/fab_main"
         app:layout_constraintStart_toStartOf="@+id/fab_main"
         app:layout_constraintTop_toBottomOf="@+id/fab_dinner"
-        app:srcCompat="@drawable/ic_avatar_placeholder"
-        app:tint="@android:color/white"
-        tools:alpha="1"
+        app:srcCompat="@drawable/ic_breakfast"
+        app:tint="@color/colorWhite"
+        tools:alpha=".6"
         tools:translationY="0dp"
         tools:visibility="visible" />
 
@@ -113,7 +190,7 @@
         android:layout_marginEnd="8dp"
         android:alpha="0"
         android:visibility="gone"
-        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardBackgroundColor="@color/colorAccentSecondary60"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="@id/fab_breakfast"
         app:layout_constraintEnd_toStartOf="@+id/fab_breakfast"
@@ -127,7 +204,7 @@
             android:paddingVertical="6dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
-            android:text="Breakfast" />
+            android:text="@string/fab_breakfast" />
 
     </androidx.cardview.widget.CardView>
 
@@ -138,7 +215,7 @@
         android:layout_marginEnd="8dp"
         android:alpha="0"
         android:visibility="gone"
-        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardBackgroundColor="@color/colorAccentSecondary60"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="@id/fab_dinner"
         app:layout_constraintEnd_toStartOf="@+id/fab_dinner"
@@ -152,7 +229,7 @@
             android:paddingVertical="6dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
-            android:text="Dinner" />
+            android:text="@string/fab_dinner" />
 
     </androidx.cardview.widget.CardView>
 
@@ -164,7 +241,7 @@
         android:layout_marginEnd="8dp"
         android:alpha="0"
         android:visibility="gone"
-        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardBackgroundColor="@color/colorAccentSecondary60"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="@id/fab_supper"
         app:layout_constraintEnd_toStartOf="@+id/fab_supper"
@@ -178,7 +255,7 @@
             android:paddingVertical="6dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
-            android:text="Supper" />
+            android:text="@string/fab_supper" />
 
     </androidx.cardview.widget.CardView>
 
@@ -190,7 +267,7 @@
         android:layout_marginEnd="8dp"
         android:alpha="0"
         android:visibility="gone"
-        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardBackgroundColor="@color/colorAccentSecondary"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="@id/fab_snacks"
         app:layout_constraintEnd_toStartOf="@+id/fab_snacks"
@@ -204,7 +281,7 @@
             android:paddingVertical="6dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
-            android:text="Snacks" />
+            android:text="@string/fab_snacks" />
 
     </androidx.cardview.widget.CardView>
 
