--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,34 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation.xml"
-    app:startDestination="@id/nav_diary">
+    app:startDestination="@id/homeFragment">
+
 
     <fragment
-        android:id="@+id/nav_activity"
-        android:name="com.kumela.cmeter.ui.fragments.activity.ActivityFragment"
-        android:label="fragment_activity"
-        tools:layout="@layout/fragment_activity" />
-    <fragment
-        android:id="@+id/nav_diary"
-        android:name="com.kumela.cmeter.ui.fragments.diary.DiaryFragment"
-        android:label="fragment_diary"
-        tools:layout="@layout/fragment_diary" >
+        android:id="@+id/homeFragment"
+        android:name="com.kumela.cmeter.ui.fragments.home.HomeFragment"
+        android:label="@string/title_home"
+        tools:layout="@layout/fragment_home">
         <action
-            android:id="@+id/action_nav_diary_to_addFoodActivity"
-            app:destination="@id/addFoodActivity" />
+            android:id="@+id/action_homeFragment_to_addFoodFragment"
+            app:destination="@id/addFoodFragment" />
     </fragment>
+
     <fragment
-        android:id="@+id/nav_profile"
-        android:name="com.kumela.cmeter.ui.fragments.profile.ProfileFragment"
-        android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" />
-    <activity
-        android:id="@+id/addFoodActivity"
-        android:name="com.kumela.cmeter.ui.fragments.diary.add_food.AddFoodActivity"
-        android:label="activity_add_food"
-        tools:layout="@layout/activity_add_food" >
+        android:id="@+id/addFoodFragment"
+        android:name="com.kumela.cmeter.ui.fragments.add_food.AddFoodFragment"
+        tools:layout="@layout/fragment_add_food" >
+        <action
+            android:id="@+id/action_addFoodFragment_to_searchActivity"
+            app:destination="@id/searchActivity" />
         <argument
             android:name="title"
             app:argType="string" />
-    </activity>
+    </fragment>
+    <activity
+        android:id="@+id/searchActivity"
+        android:name="com.kumela.cmeter.ui.fragments.search.SearchActivity"
+        android:label="@string/title_search"
+        tools:layout="@layout/activity_search" />
 </navigation>
