--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,8 +20,7 @@
     <color name="colorProtein50">#80c62828</color>
 
 
-<!--    <color name="colorTextSecondary">#AEAEAE</color>-->
-    <color name="colorTextSecondary">#AF1919</color>
+    <color name="colorTextSecondary">#99FFFFFF</color>
 <!--    <color name="colorDivider">#BDBDBD</color>-->
 
 
