--- a/app/src/main/res/layout/nutrition_details_activity.xml
+++ b/app/src/main/res/layout/nutrition_details_activity.xml
@@ -13,14 +13,15 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:collapsedTitleTextAppearance="@style/CTL_TextCollapsed"
             app:contentScrim="@color/colorPrimaryDark"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
             app:toolbarId="@+id/toolbar_food_details">
 
             <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_food_details_header"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/banana"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
 
@@ -42,6 +43,6 @@
         app:backgroundTint="@color/colorAccentSecondary"
         android:layout_height="wrap_content" />
 
-    <include layout="@layout/food_details_content" />
+    <include layout="@layout/nutrition_details_content" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
