--- a/app/src/main/res/layout/nutrition_details_content.xml
+++ b/app/src/main/res/layout/nutrition_details_content.xml
@@ -2,6 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/sv_nutrition_details"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
@@ -10,16 +11,21 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:paddingStart="16dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="32dp">
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_food_details_head_amount_carbs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:textAppearance="@style/Header"
-            app:layout_constraintEnd_toEndOf="@id/tv_food_details_head_carbs"
-            app:layout_constraintStart_toStartOf="@id/tv_food_details_head_carbs"
+            app:layout_constraintEnd_toStartOf="@id/tv_food_details_head_amount_fats"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="23g" />
 
@@ -28,73 +34,70 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="@style/Header"
-            app:layout_constraintEnd_toEndOf="@id/tv_food_details_head_fats"
-            app:layout_constraintStart_toStartOf="@id/tv_food_details_head_fats"
+            app:layout_constraintEnd_toStartOf="@id/tv_food_details_head_amount_protein"
+            app:layout_constraintStart_toEndOf="@id/tv_food_details_head_amount_carbs"
             app:layout_constraintTop_toTopOf="@id/tv_food_details_head_amount_carbs"
-            tools:layout_editor_absoluteX="293dp"
-            tools:layout_editor_absoluteY="11dp"
             tools:text="1.1g" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_food_details_head_amount_protein"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
             android:textAppearance="@style/Header"
-            app:layout_constraintEnd_toEndOf="@id/tv_food_details_head_protein"
-            app:layout_constraintStart_toStartOf="@id/tv_food_details_head_protein"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_food_details_head_amount_fats"
             app:layout_constraintTop_toTopOf="@id/tv_food_details_head_amount_fats"
-            tools:layout_editor_absoluteX="148dp"
-            tools:layout_editor_absoluteY="-6dp"
             tools:text="3.5g" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_food_details_head_carbs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/carbs"
             android:textAppearance="@style/Header.Small"
-            app:layout_constraintEnd_toStartOf="@id/tv_food_details_head_fats"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_food_details_head_amount_carbs"
-            tools:text="Carbs" />
+            app:layout_constraintStart_toStartOf="@id/tv_food_details_head_amount_carbs"
+            app:layout_constraintEnd_toEndOf="@id/tv_food_details_head_amount_carbs"
+            app:layout_constraintTop_toBottomOf="@id/tv_food_details_head_amount_carbs" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_food_details_head_fats"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/fats"
             android:textAppearance="@style/Header.Small"
-            app:layout_constraintEnd_toStartOf="@id/tv_food_details_head_protein"
-            app:layout_constraintStart_toEndOf="@id/tv_food_details_head_carbs"
-            app:layout_constraintTop_toBottomOf="@id/tv_food_details_head_amount_fats"
-            tools:text="Fats" />
+            app:layout_constraintEnd_toEndOf="@id/tv_food_details_head_amount_fats"
+            app:layout_constraintStart_toStartOf="@id/tv_food_details_head_amount_fats"
+            app:layout_constraintTop_toBottomOf="@id/tv_food_details_head_amount_fats" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_food_details_head_protein"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/protein"
             android:textAppearance="@style/Header.Small"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tv_food_details_head_fats"
-            app:layout_constraintTop_toBottomOf="@id/tv_food_details_head_amount_protein"
-            tools:text="Protein" />
+            app:layout_constraintEnd_toEndOf="@id/tv_food_details_head_amount_protein"
+            app:layout_constraintStart_toStartOf="@id/tv_food_details_head_amount_protein"
+            app:layout_constraintTop_toBottomOf="@id/tv_food_details_head_amount_protein" />
 
-        <androidx.constraintlayout.widget.Barrier
-            android:id="@+id/barrier_below_head"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:barrierDirection="bottom"
-            app:constraint_referenced_ids="tv_food_details_head_carbs,tv_food_details_head_fats,tv_food_details_head_protein" />
-
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/pie_food_details"
+        <View
+            android:id="@+id/divider_below_head"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintDimensionRatio="1"
+            android:layout_height="@dimen/divider_height"
+            android:layout_marginTop="12dp"
+            android:background="@color/colorPrimaryDark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/barrier_below_head"
-            app:layout_constraintWidth_percent=".4"
+            app:layout_constraintTop_toBottomOf="@id/tv_food_details_head_fats" />
+
+        <com.kumela.cmeter.ui.common.BaseNutritionPieChart
+            android:id="@+id/pie_food_details"
+            android:layout_width="@dimen/pie_nutrition_details"
+            android:layout_height="@dimen/pie_nutrition_details"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider_below_head"
             tools:background="@color/colorPrimaryDark" />
 
         <com.google.android.material.textview.MaterialTextView
@@ -103,13 +106,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/details_card_header"
-            android:textStyle="bold"
             android:textAppearance="@style/Header"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/pie_food_details" />
 
         <include
-            layout="@layout/food_details_card"
+            layout="@layout/nutrition_details_card"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
