--- a/app/src/main/res/layout/nutrition_home_fab_menu.xml
+++ b/app/src/main/res/layout/nutrition_home_fab_menu.xml
@@ -4,6 +4,7 @@
     tools:background="@color/colorPrimary"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:elevation="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
