--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,14 +12,18 @@
     </style>
 
     <style name="CustomActivityTransition" parent="@android:style/Animation.Activity">
-        <item name="android:activityOpenEnterAnimation">@anim/bottom_up</item>
-        <item name="android:activityOpenExitAnimation">@anim/bottom_down</item>
-        <item name="android:activityCloseEnterAnimation">@anim/bottom_up</item>
-        <item name="android:activityCloseExitAnimation">@anim/bottom_down</item>
+        <item name="android:activityOpenEnterAnimation">@anim/slide_in_right</item>
+        <item name="android:activityOpenExitAnimation">@anim/slide_out_left</item>
+        <item name="android:activityCloseEnterAnimation">@anim/slide_in_left</item>
+        <item name="android:activityCloseExitAnimation">@anim/slide_out_right</item>
     </style>
 
 
     <style name="Header" parent="@style/TextAppearance.MaterialComponents.Headline5" />
+
+    <style name="Header.Medium" parent="@style/TextAppearance.MaterialComponents.Headline6" >
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
 
     <style name="Header.Small" parent="@style/TextAppearance.MaterialComponents.Subtitle1" />
 
@@ -49,5 +53,13 @@
         <item name="android:textColor">@color/colorWhite</item>
     </style>
 
+    <style name="CTL_TextCollapsed" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
 
+    <style name="TextInputLayoutAppearance" parent="Widget.Design.TextInputLayout">
+        <!-- reference our hint & error styles -->
+        <item name="colorControlNormal">@color/colorTextSecondary</item>
+    </style>
 </resources>
