--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -41,12 +41,12 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_register_username"
-                style="@style/Widget.Design.TextInputLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="48dp"
                 android:textColorHint="@color/colorTextSecondary"
-                android:theme="@style/TextInputLayoutAppearance"
+                app:boxStrokeColor="@color/colorAccent"
                 app:counterEnabled="true"
                 app:counterMaxLength="15"
                 app:counterTextColor="@color/colorTextSecondary"
@@ -54,6 +54,7 @@
                 app:endIconMode="custom"
                 app:endIconTint="@color/colorAccent"
                 app:errorTextColor="@color/colorAccent"
+                app:hintTextColor="@color/colorAccent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_register_header">
@@ -70,16 +71,17 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_register_email"
-                style="@style/Widget.Design.TextInputLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:textColorHint="@color/colorTextSecondary"
-                android:theme="@style/TextInputLayoutAppearance"
+                app:boxStrokeColor="@color/colorAccent"
                 app:endIconDrawable="@drawable/ic_email"
                 app:endIconMode="custom"
                 app:endIconTint="@color/colorAccent"
                 app:errorTextColor="@color/colorAccent"
+                app:hintTextColor="@color/colorAccent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/til_register_username">
@@ -91,24 +93,25 @@
                     android:hint="@string/hint_email"
                     android:inputType="textEmailAddress"
                     android:textAppearance="@style/Header.Small"
-                    android:textColor="@color/colorWhite" />
+                    android:textColor="@color/colorWhite"
+                    android:textCursorDrawable="@null" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_register_password"
-                style="@style/Widget.Design.TextInputLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:textColorHint="@color/colorTextSecondary"
-                android:theme="@style/TextInputLayoutAppearance"
+                app:boxStrokeColor="@color/colorAccent"
                 app:errorTextColor="@color/colorAccent"
+                app:hintTextColor="@color/colorAccent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/til_register_email"
                 app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@color/colorAccent"
-                app:startIconCheckable="true">
+                app:passwordToggleTint="@color/colorAccent">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_register_password"
@@ -118,7 +121,8 @@
                     android:imeOptions="actionDone"
                     android:inputType="textPassword"
                     android:textAppearance="@style/Header.Small"
-                    android:textColor="@color/colorWhite" />
+                    android:textColor="@color/colorWhite"
+                    android:textCursorDrawable="@null" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
