--- a/app/src/main/res/menu/main_nav_menu.xml
+++ b/app/src/main/res/menu/main_nav_menu.xml
@@ -17,4 +17,10 @@
             android:title="@string/nav_menu_activity" />
     </group>
 
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/menu_nav_sign_out"
+            android:icon="@drawable/ic_sign_out"
+            android:title="@string/nav_menu_sign_out" />
+    </group>
 </menu>
