--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,8 +58,9 @@
         <item name="android:textColor">@color/colorWhite</item>
     </style>
 
-    <style name="TextInputLayoutAppearance" parent="Widget.Design.TextInputLayout">
-        <!-- reference our hint & error styles -->
-        <item name="colorControlNormal">@color/colorTextSecondary</item>
+    <style name="AppTheme.Picker">
+        <item name="colorControlNormal">@android:color/transparent</item>
+        <item name="android:textColorPrimary">@color/colorWhite</item>
+        <item name="android:textSize">20sp</item>
     </style>
 </resources>
