--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,11 @@
 <resources>
     <color name="colorPrimary">#2F355E</color>
     <color name="colorPrimaryDark">#1E2135</color>
+
     <color name="colorAccent">#FF0844</color>
+    <color name="colorAccent50">#80FF0844</color>
 
     <color name="colorAccentSecondary">#01C3F9</color>
-
     <color name="colorAccentSecondary80">#CC01C3F9</color>
 
     <color name="colorWhite">#FFFFFF</color>
