--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -34,20 +34,6 @@
         tools:text="1 slice" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/btn_item_search_add_done"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:padding="4dp"
-        android:alpha="0"
-        android:scaleY="0"
-        android:scaleX="0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_done" />
-
-    <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/btn_item_search_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -56,5 +42,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_add_round" />
+        app:srcCompat="@drawable/ic_add_round_anim" />
 </androidx.constraintlayout.widget.ConstraintLayout>
