--- a/app/src/main/res/layout/nutrition_details_activity.xml
+++ b/app/src/main/res/layout/nutrition_details_activity.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimaryDark">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/abl_food_details"
@@ -11,6 +12,7 @@
         android:layout_height="@dimen/height_collapsing_toolbar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/ctl_nutrition_details"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:collapsedTitleTextAppearance="@style/CTL_TextCollapsed"
@@ -34,15 +36,24 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_food_details"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:visibility="invisible"
         app:backgroundTint="@color/colorAccentSecondary"
         app:layout_anchor="@id/abl_food_details"
         app:layout_anchorGravity="end|bottom"
-        app:srcCompat="@drawable/ic_add_round"
-        app:tint="@color/colorPrimaryDark" />
+        app:srcCompat="@drawable/ic_add_round_anim"
+        app:tint="@color/colorPrimaryDark"
+        tools:visibility="visible" />
 
     <include layout="@layout/nutrition_details_content" />
+
+    <include
+        layout="@layout/nutrition_details_serving"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
