--- a/app/src/main/res/layout/nutrition_home_meal_card.xml
+++ b/app/src/main/res/layout/nutrition_home_meal_card.xml
@@ -13,7 +13,7 @@
         android:padding="16dp">
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_food_header"
+            android:id="@+id/tv_meal_card_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="@style/Header"
@@ -22,96 +22,88 @@
             tools:text="Breakfast" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_food_calories"
+            android:id="@+id/tv_meal_card_calories"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="2dp"
             android:textAppearance="@style/Header.Small"
-            app:layout_constraintBottom_toBottomOf="@id/tv_food_header"
-            app:layout_constraintEnd_toStartOf="@id/tv_food_kcal"
+            app:layout_constraintBottom_toBottomOf="@id/tv_meal_card_header"
+            app:layout_constraintEnd_toStartOf="@id/tv_meal_card_kcal"
             tools:text="1000" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_food_kcal"
+            android:id="@+id/tv_meal_card_kcal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:alpha=".6"
-            android:text="@string/kcal"
+            android:text="@string/cal"
             android:textAppearance="@style/SubTitle"
-            app:layout_constraintBottom_toBottomOf="@id/tv_food_calories"
+            app:layout_constraintBottom_toBottomOf="@id/tv_meal_card_calories"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/iv_food_carbs"
+            android:id="@+id/iv_meal_card_carbs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:background="@drawable/bgr_round"
             android:backgroundTint="@color/colorCarbs"
-            app:layout_constraintEnd_toStartOf="@id/tv_food_carbs"
+            app:layout_constraintEnd_toStartOf="@id/tv_meal_card_carbs"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_food_header" />
+            app:layout_constraintTop_toBottomOf="@id/tv_meal_card_header" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_food_carbs"
+            android:id="@+id/tv_meal_card_carbs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="28dp"
-            app:layout_constraintBottom_toBottomOf="@id/iv_food_carbs"
-            app:layout_constraintStart_toEndOf="@id/iv_food_carbs"
-            app:layout_constraintEnd_toStartOf="@id/iv_food_fats"
+            app:layout_constraintBottom_toBottomOf="@id/iv_meal_card_carbs"
+            app:layout_constraintStart_toEndOf="@id/iv_meal_card_carbs"
+            app:layout_constraintEnd_toStartOf="@id/iv_meal_card_fats"
             tools:text="40g" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/iv_food_fats"
+            android:id="@+id/iv_meal_card_fats"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/bgr_round"
             android:backgroundTint="@color/colorFats"
-            app:layout_constraintBottom_toBottomOf="@id/tv_food_carbs"
-            app:layout_constraintEnd_toStartOf="@id/tv_food_fats"
-            app:layout_constraintStart_toEndOf="@id/tv_food_carbs" />
+            app:layout_constraintBottom_toBottomOf="@id/tv_meal_card_carbs"
+            app:layout_constraintEnd_toStartOf="@id/tv_meal_card_fats"
+            app:layout_constraintStart_toEndOf="@id/tv_meal_card_carbs" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_food_fats"
+            android:id="@+id/tv_meal_card_fats"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="28dp"
-            app:layout_constraintBottom_toBottomOf="@id/iv_food_fats"
-            app:layout_constraintStart_toEndOf="@id/iv_food_fats"
-            app:layout_constraintEnd_toStartOf="@id/iv_food_protein"
+            app:layout_constraintBottom_toBottomOf="@id/iv_meal_card_fats"
+            app:layout_constraintStart_toEndOf="@id/iv_meal_card_fats"
+            app:layout_constraintEnd_toStartOf="@id/iv_meal_card_proteins"
             tools:text="10g" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/iv_food_protein"
+            android:id="@+id/iv_meal_card_proteins"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/bgr_round"
             android:backgroundTint="@color/colorProtein"
-            app:layout_constraintBottom_toBottomOf="@id/tv_food_fats"
-            app:layout_constraintEnd_toStartOf="@id/tv_food_protein"
-            app:layout_constraintStart_toEndOf="@id/tv_food_fats" />
+            app:layout_constraintBottom_toBottomOf="@id/tv_meal_card_fats"
+            app:layout_constraintEnd_toStartOf="@id/tv_meal_card_proteins"
+            app:layout_constraintStart_toEndOf="@id/tv_meal_card_fats" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_food_protein"
+            android:id="@+id/tv_meal_card_proteins"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/iv_food_protein"
+            app:layout_constraintBottom_toBottomOf="@id/iv_meal_card_proteins"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="4dp"
-            app:layout_constraintStart_toEndOf="@id/iv_food_protein"
+            app:layout_constraintStart_toEndOf="@id/iv_meal_card_proteins"
             tools:text="25g" />
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:srcCompat="@drawable/ic_arrow_vertical" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
