--- a/app/src/main/res/navigation/nav_graph_app.xml
+++ b/app/src/main/res/navigation/nav_graph_app.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_nav_nutrition_to_addFoodFragment"
             app:destination="@id/addFoodFragment" />
+        <action
+            android:id="@+id/action_nav_nutrition_to_mealFragment"
+            app:destination="@id/mealFragment" />
     </fragment>
     <fragment
         android:id="@+id/nav_water"
@@ -29,7 +32,15 @@
         android:name="com.kumela.cmeter.ui.screens.app.nutrition.add_food.AddFoodFragment"
         tools:layout="@layout/add_food_fragment" >
         <argument
-            android:name="title"
+            android:name="mealType"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/mealFragment"
+        android:name="com.kumela.cmeter.ui.screens.app.nutrition.meal.MealFragment"
+        tools:layout="@layout/meal_fragment">
+        <argument
+            android:name="mealType"
             app:argType="string" />
     </fragment>
 
