--- a/app/src/main/res/navigation/nav_graph_app.xml
+++ b/app/src/main/res/navigation/nav_graph_app.xml
@@ -42,6 +42,9 @@
         <argument
             android:name="mealType"
             app:argType="string" />
+        <argument
+            android:name="goalCaloriesInDay"
+            app:argType="integer" />
     </fragment>
 
 
