--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="pie_home_dashboard_calorie">100dp</dimen>
     <dimen name="pb_height_calorie_dashboard">5dp</dimen>
+    <dimen name="pb_height_meal_dashboard">3dp</dimen>
     <dimen name="height_collapsing_toolbar">192dp</dimen>
     <dimen name="food_details_card_header_space">20dp</dimen>
     <dimen name="food_details_card_sub_header_to_header_margin">4dp</dimen>
@@ -11,5 +12,5 @@
     <dimen name="card_default_radius">12dp</dimen>
     <dimen name="card_radius_authentication">24dp</dimen>
     <dimen name="pie_meal_card">80dp</dimen>
-    <dimen name="meal_goals_space">8dp</dimen>
+    <dimen name="meal_goals_space">10dp</dimen>
 </resources>
